     avant-window-navigator.
   - Add depends on avant-window-navigator, python-desktop-agnostic, bzr and
     python-dbus for awn-settings.
   - Replace vala depends by vala-desktop-agnostic for vala-awn.
   - Add Conflicts/Replaces to replace separator applets which is in core now.
   - Add mutter as another composite manager.
   - Use space instead of tabulation.

 -- Julien Lavergne <gilir@ubuntu.com>  Sat, 05 Jun 2010 16:43:12 +0200

avant-window-navigator (0.3.2.1-6) unstable; urgency=medium

  * debian/patches/02-ftbfs-python-2.6.patch: Remove LOCALMODLIBS in configure
    and m4 to avoid unnecessary linking with -lssl. (Closes: #571150)

 -- Julien Lavergne <julien.lavergne@gmail.com>  Tue, 02 Mar 2010 00:11:24 +0100

avant-window-navigator (0.3.2.1-5) unstable; urgency=medium

  * Urgency set to medium to fix RC bug (#566995).
  * debian/patches/10_correct_execption.patch
   - Don't crash when raising exception. (Closes: #562549)
  * debian/control:
   - Add depends on python-glade2 for awn-manager, as it used glade for the UI.
     (Closes: #568253).
   - Remove python-elementtree from Build-Depends, only depend on
     python-all-dev as elementtree is already part of stdlib (Closes: #566995).
     Thanks Luca Falavigna for the patch.
   - Bump Standards-Version to 3.8.4 (no change needed).
  * Switch to dpkg-source 3.0 (quilt) format
   - Remove build-depends on quilt.
   - Remove README.source for the usage of quilt.
   - Remove usage of quilt in debian/rules. 

 -- Julien Lavergne <julien.lavergne@gmail.com>  Sun, 07 Feb 2010 13:41:53 +0100

avant-window-navigator (0.3.2.1-4) unstable; urgency=low

  * debian/rules: Build python-awn for only 1 version of python.
    (Closes: #531176) 

 -- Julien Lavergne <julien.lavergne@gmail.com>  Wed, 17 Jun 2009 00:20:41 +0200

avant-window-navigator (0.3.2.1-3) unstable; urgency=medium

  * Rename preinst to python-awn.preinst to use it only on python-awn binary,
    really Closes: #530274